--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,12 @@
 @import url(http://fonts.googleapis.com/css?family=Gabriela);
 
-html, body {
+html,
+body {
   height: 100%;
   min-height: 100%;
-}
-
-body {
   background-color: blue;
   background-size: cover;
   background-attachment: fixed;
-  font-family: COPPERPLATE, Papyrus, fantasy;
   font-size: 100%;
 }
 
@@ -21,11 +18,12 @@ body {
 
 #content {
   padding: 20px;
-  background: rgba(255,255,255,.85);
+  background: rgba(255, 255, 255, 0.85);
 }
 
-h1, h2 {
-  font-family: 'Papyrus', fantasy;
+h1,
+h2 {
+  font-family: "Papyrus", fantasy;
   color: White;
 }
 
@@ -36,14 +34,14 @@ h1 {
 
 h2 {
   font-size: 1.5em;
-  margin-top: .5em;
+  margin-top: 0.5em;
 }
 
 h3 {
-  font-family: 'Lucida Handwriting', cursive;
+  font-family: "Lucida Handwriting", cursive;
   color: Red;
   font-size: 1.5em;
-  margin-top: .5em;
+  margin-top: 0.5em;
 }
 
 img {
@@ -54,6 +52,8 @@ img {
 
 p {
   font-size: 15px;
+  font-family: cursive;
+  color: rgb(71, 71, 231);
 }
 
 a {
@@ -75,12 +75,7 @@ a:hover {
   body {
     font-size: 120%;
   }
-  h1 {
-    font-size: 2.5em;
-  }
-  h2 {
-    font-size: 1em;
-  }
+
   .wrapper {
     width: 95%;
   }
